# tbparser

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yaml
tbparser/: __init__.py  events_reader.py  summary_reader.py
tests/: test_tbparser.py
